# LSTM-long-memory

./: .gitignore  .gitmodules  LICENSE  LSTM_short_memory.ipynb  README.md  layers.py  music2.ipynb
Recherche clément/: LSTM_updated.ipynb  Long memory LSTM.ipynb  _arfima.py  climat_data_analysis.ipynb  d_test.py  pyproject.toml  utils.py
Recherche clément/time_series_prediction/: models.py  train.py
Recherche clément/ts2vec/: dilated_conv.py  encoder.py
Test Kelly/: LSTM_short_memory.ipynb  _varfima.py  lstm_on_WN.pth  lstm_on_fractionnaly_differenciated_WN.pth  lstm_varfima_model.pth  test.py
data/: ocean_level_data.csv
mRNNmLSTM/: reference.md  train.py
notebooks/: climate_data_analysis.ipynb  lstm_memory_analysis.ipynb  lstm_mlstm_analysis.ipynb  music_data_analysis.ipynb
scripts/: d_test.py  reference.md  utils.py
ts2vec/: reference.md
