[tool.poetry]
name = "lstms"
version = "0.1.0"
description = "Packages for studying LTSMs and long-term memory series"
authors = ["clemdst <clement.destouesse@ensae.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "2.0.0"
scipy = "^1.15.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
keras = "^3.8.0"
tensorflow = "^2.18.0"
tensorflow-intel = "^2.18.0"
torch = "^2.6.0"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
